Bungusland Mobile Page Started
Also, Lorum has been Replaced with actual text.

--- a/public/bungusland/bungusland.html
+++ b/public/bungusland/bungusland.html
@@ -9,7 +9,7 @@
     <title>Global Mechanic | Unity Project</title>
 
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon@2x.png" />
 
     <script src="js/unity-progress-bar.js"></script>
     <script src="js/jquery-2.1.4.js"></script>
