--- a/public/bungusland/bungusland.html
+++ b/public/bungusland/bungusland.html
@@ -42,7 +42,7 @@
 
     <div id="music" style="display:none;"> 
       <audio loop>
-         <source src="content/Bungusland_Overture.mp3" type="audio/mpeg" loop></source>
+         <source src="content/Bungusland_Overture.mp3" type="audio/mpeg"></source>
       </audio>
     </div>
 
