More HTML Changes

--- a/public/bungusland/bungusland.html
+++ b/public/bungusland/bungusland.html
@@ -42,11 +42,11 @@
 
     <div id="music" style="display:none;"> 
       <audio loop>
-         <source src="content/Bungusland_Overture.mp3" type="audio/mpeg"></source>
+         <source src="content/Bungusland_Overture.mp3" type="audio/mpeg"/>
       </audio>
     </div>
 
-    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="540px" width="960px"></canvas>
+    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="540" width="960"></canvas>
     <script type='text/javascript'>
       var Module = {
         TOTAL_MEMORY: 268435456,
