--- a/public/bungusland/m.bungusland.html
+++ b/public/bungusland/m.bungusland.html
@@ -40,7 +40,7 @@
 
     <div id="music"> 
       <audio loop>
-         <source src="content/Bungusland_Overture.mp3" type="audio/mpeg" loop></source>
+         <source src="content/Bungusland_Overture.mp3" type="audio/mpeg" />
       </audio>
     </div>
 
