--- a/src-client/template.dev.html
+++ b/src-client/template.dev.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset=utf-8/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Global Mechanic Media</title>
-    <script src="/bundle.js"></script>
+    <title>Website Starter</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-with-addons.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.0.0-0/react-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
   </head>
   <body>
     <main/>
