--- a/src-client/production.html
+++ b/src-client/production.html
@@ -6,6 +6,7 @@
     <title>Website Starter</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-with-addons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.min.js"></script>
+    <script src="assets/bundle"></script>
   </head>
   <body>
     <main/>
