--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Website Starter</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-with-addons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.min.js"></script>
-    <script type="text/javascript" src="assets/bundle.js"></script></head>
+    <script src="/assets/bundle"></script>
+  </head>
   <body>
     <main/>
   </body>
