--- a/src-client/production.html
+++ b/src-client/production.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset=utf-8/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Website Starter</title>
+    <title>GLOBAL MECHANIC</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-with-addons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.min.js"></script>
     <script src="/assets/bundle.js"></script>
