html main tag id

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,6 @@
     <script type="text/javascript" src="/global-mechanic-www.js"></script>
   </head>
   <body>
-    <main id='global-mechanic-www'/>
+    <main id='global-mechanic'/>
   </body>
 </html>
