--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
     <!-- #JSON-INJECTION -->
 
-</head>
+<link href="/vendors~main.css" rel="stylesheet"><script type="text/javascript" src="/1.global-mechanic.js"></script><script type="text/javascript" src="/global-mechanic.js"></script></head>
 
 <body>
 
